[package]
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2018"
name = "hands_on_algos"
version = "0.1.0"

[dependencies]
fastrand = "1.4.1"
indoc = "1.0.3"
rand = "0.8.0"
termion = "1.5.6"

bincode = "1.3.3"
serde = "1.0.126"
serde_derive = "1.0.126"

failure = "0.1.8"
failure_derive = "0.1.8"
